TASK-6: mono fixes
